tests/neg-custom-args/captures/vars.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/vars.scala:11:24 -----------------------------------------
11 |  val z2c: () -> Unit = z2  // error
   |                        ^^
   |                        Found:    () ->{z2} Unit
   |                        Required: () -> Unit
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/vars.scala:23:14 --------------------------------------------------------------
23 |    a = x => g(x)      // error
   |             ^^^^
   |             reference (cap3 : CC^{cap[scope]}) is not included in the allowed capture set {cap[test]}
   |             of an enclosing function literal with expected type box String ->{cap[test]} String
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/vars.scala:24:8 ------------------------------------------
24 |    a = g      // error
   |        ^
   |        Found:    box (x: String) ->{cap3} String
   |        Required: box (x$0: String) ->{cap[test]} String
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/vars.scala:26:12 -----------------------------------------
26 |    b = List(g) // error
   |        ^^^^^^^
   |        Found:    List[box (x$0: String) ->{cap3} String]
   |        Required: List[box String ->{cap[test]} String]
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/vars.scala:35:2 ---------------------------------------------------------------
35 |  local { root => cap3 => // error
   |  ^^^^^
   |  escaping local reference root.type
